добавить информацию о грузчиках стоимости

--- a/index.css
+++ b/index.css
@@ -24,12 +24,26 @@
 @import url(./blocks/service/__text/service__text.css);
 @import url(./blocks/cars/cars.css);
 @import url(./blocks/cars/__title/cars__title.css);
-@import url(./blocks/cars/container/cars__container.css);
+@import url(./blocks/cars/__container/cars__container.css);
 @import url(./blocks/cars/__text/cars__text.css);
 @import url(./blocks/cars/__photo/cars__photo.css);
+@import url(./blocks/cars/__photo-char/cars__photo-char.css);
 @import url(./blocks/footer/footer.css);
 @import url(./blocks/footer/__icons/footer__icons.css);
 @import url(./blocks/footer/__icon/footer__icon.css);
 @import url(./blocks/footer/__link/footer__link.css);
 @import url(./blocks/footer/__info/footer__info.css);
 @import url(./blocks/footer/__text/footer__text.css);
+@import url(./blocks/gruzchiki/gruzchiki.css);
+@import url(./blocks/gruzchiki/__container/gruzchiki__container.css);
+@import url(./blocks/gruzchiki/__text/gruzchiki__text.css);
+@import url(./blocks/gruzchiki/__title/gruzchiki__title.css);
+@import url(./blocks/slider/slider.css);
+@import url(./blocks/slider/__photo/slider__photo.css);
+@import url(./blocks/price/price.css);
+@import url(./blocks/price/__container/price__container.css);
+@import url(./blocks/price/__item-container/price__item-container.css);
+@import url(./blocks/price/__item-price/price__item-price.css);
+@import url(./blocks/price/__item/price__item.css);
+@import url(./blocks/price/__items/price__items.css);
+@import url(./blocks/price/__title/price__title.css);
