--- a/blocks/cars/__photo/cars__photo.css
+++ b/blocks/cars/__photo/cars__photo.css
@@ -1,5 +1,9 @@
 .cars__photo{
     margin: 0;
-    padding: 30px;
+    padding: 10px;
     width: 600px;
+    height: 400px;
+    object-fit: cover;
+    box-sizing: border-box;
+    flex-shrink: 0;
 }
