--- a/blocks/gruzchiki/__container/gruzchiki__container.css
+++ b/blocks/gruzchiki/__container/gruzchiki__container.css
@@ -1,4 +1,4 @@
-.cars__container{
+.gruzchiki__container{
     margin:0;
     padding: 0;
     display: flex;
@@ -7,4 +7,5 @@
     border: 4px solid rgb(80, 184, 72);
     border-radius: 10px;
     box-shadow: 7px 5px 5px  rgb(80, 184, 72);
+    width: 1200px;
 }
