--- a/blocks/content/__container-for-tel/content__container-for-tel.css
+++ b/blocks/content/__container-for-tel/content__container-for-tel.css
@@ -1,11 +1,11 @@
 .content__container-for-tel{
-    margin: 100px 40px 0 40px;
+    margin: 0 40px 0 40px;
     padding: 0;
-    background-color: rgb(80, 184, 72);
+    background-color: #ffc843;
     width: 400px;
-    height: 100px;
     border-radius: 30px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-decoration: none;
