--- a/blocks/content/__container/content__container.css
+++ b/blocks/content/__container/content__container.css
@@ -3,6 +3,6 @@
     padding: 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    /* justify-content: space-between; */
 
 }
