--- a/blocks/content/__photo/content__photo.css
+++ b/blocks/content/__photo/content__photo.css
@@ -1,6 +1,6 @@
 .content__photo{
     margin: 0;
-    padding: 50px;
+    padding: 50px 50px 0 50px;
     width: 600px;
     height: 600px;
     object-fit: cover;
