--- a/blocks/content/__price/content__price.css
+++ b/blocks/content/__price/content__price.css
@@ -1,6 +1,6 @@
 .content__price{
     margin: 0;
-    padding: 0 0 100px 40px;
+    padding: 60px 0 0 40px;
     font-size: 54px;
     font-weight: 900;
     line-height: 58px;
