--- a/blocks/content/__tel/content__tel.css
+++ b/blocks/content/__tel/content__tel.css
@@ -1,10 +1,10 @@
 .content__tel{
     margin: 0;
-    padding: 0;
+    padding: 30px;
     font-size: 25px;
     font-weight: 700;
     line-height: 30px;
     letter-spacing: 0.2em;
-    color: white;
+    color: #00c395;
     text-decoration: none;
 }
