--- a/index.css
+++ b/index.css
@@ -8,8 +8,12 @@
 @import url(./blocks/main/main.css);
 @import url(./blocks/content/content.css);
 @import url(./blocks/content/__container/content__container.css);
+@import url(./blocks/content/__logo-mts/content__logo-mts.css);
 @import url(./blocks/content/__container-for-tel/content__container-for-tel.css);
 @import url(./blocks/content/__tel/content__tel.css);
+@import url(./blocks/content/__container-for-contact/content__container-for-contact.css);
+@import url(./blocks/content/__link/content__link.css);
+@import url(./blocks/content/__icon/content__icon.css);
 @import url(./blocks/content/__title/content__title.css);
 @import url(./blocks/content/__price/content__price.css);
 @import url(./blocks/content/__photo/content__photo.css);
