адаптированы разделы content, service

--- a/blocks/content/__container-for-contact/content__container-for-contact.css
+++ b/blocks/content/__container-for-contact/content__container-for-contact.css
@@ -1,8 +1,14 @@
 .content__container-for-contact{
     margin:0 0 0 40px;
     padding: 0;
-    width: 400px;
+    max-width: 400px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
+}
+@media screen and (max-width: 800px) {
+    .content__container-for-contact{
+        margin: 0;
+        justify-content: center;
+    }
 }
