--- a/blocks/content/__container/content__container.css
+++ b/blocks/content/__container/content__container.css
@@ -3,6 +3,10 @@
     padding: 0;
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
-
+}
+@media screen and (max-width:800px) {
+    .content__container{
+        justify-content: center;
+        align-items: center;
+    }
 }
