--- a/blocks/content/__link/content__link.css
+++ b/blocks/content/__link/content__link.css
@@ -6,6 +6,15 @@
     width: 50px;
     height: 50px;
 }
-/* .content__link:last-child{
-    margin: 15px 0 15px 15px;
-} */
+@media screen and (max-width: 1100px) {
+    .content__link{
+        width: 45px;
+        height: 45px;
+    } 
+}
+@media screen and (max-width: 850px) {
+    .content__link{
+        width: 35px;
+        height: 35px;
+    } 
+}
