--- a/blocks/content/__logo-mts/content__logo-mts.css
+++ b/blocks/content/__logo-mts/content__logo-mts.css
@@ -1,7 +1,22 @@
 .content__logo-mts{
-    margin:40px 0 0 40px;
+    margin: 40px 0 0 40px;
     padding: 10px;
     width: 120px;
-    height: 40px;
     object-fit: cover;
+}
+@media screen and (max-width: 1100px) {
+    .content__logo-mts{
+        width: 100px;
+    }
+}
+@media screen and (max-width: 850px) {
+    .content__logo-mts{
+        width: 70px;
+        margin: 15px 0 0 40px;
+    }
+}
+@media screen and (max-width: 800px) {
+    .content__logo-mts{
+        margin: 0;
+    }
 }
