--- a/blocks/content/__photo/content__photo.css
+++ b/blocks/content/__photo/content__photo.css
@@ -1,7 +1,19 @@
 .content__photo{
     margin: 0;
-    padding: 50px 50px 0 50px;
-    width: 600px;
-    height: 600px;
+    padding: 50px 50px 0 20px;
+    width: calc(100%/2 + 200px);
     object-fit: cover;
+}
+@media screen and (max-width: 800px) {
+    .content__photo{
+        width: 300px;
+        padding: 0 0 0 40px;
+        margin:-50px 0 0 0;
+    }
+}
+@media screen and (max-width: 450px) {
+    .content__photo{
+        width: 260px;
+        padding: 0 0 0 20px;
+    }
 }
