--- a/blocks/content/__price/content__price.css
+++ b/blocks/content/__price/content__price.css
@@ -7,3 +7,25 @@
     letter-spacing: 0em;
     color: rgb(80, 184, 72);
 }
+@media screen and (max-width: 1200px) {
+    .content__price{
+        font-size: 40px;
+    }
+}
+@media screen and (max-width: 1100px) {
+    .content__price{
+        font-size: 35px;
+        padding: 40px 0 20px 40px;
+    }
+}
+@media screen and (max-width: 850px) {
+    .content__price{
+        font-size: 25px;
+        padding: 20px 0 10px 40px;
+    }
+}
+@media screen and (max-width: 800px) {
+    .content__price{
+        padding: 0;
+    }
+}
