--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,6 @@
 .footer{
-    margin: 60px 40px 0 40px;
-    padding: 0;
+    margin: 60px 0 0 0;
+    padding: 0 40px 0 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
