--- a/blocks/service/__container/service__container.css
+++ b/blocks/service/__container/service__container.css
@@ -1,8 +1,20 @@
 .service__container{
-    margin:0 40px;
+    margin:0;
     padding: 0;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     gap: 30px;
-    width: 1200px;
+    width: 95%;
+}
+@media screen and (max-width: 650px) {
+    .service__container{
+        gap: 10px;
+    }
+}
+@media screen and (max-width: 550px) {
+    .service__container{
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+    }
 }
