--- a/blocks/service/__option/service__option.css
+++ b/blocks/service/__option/service__option.css
@@ -2,6 +2,7 @@
     margin:0;
     padding: 0;
     width: 400px;
+    max-width: 85%;
     display: flex;
     flex-direction: column;
     align-items: center;
