--- a/blocks/service/__text/service__text.css
+++ b/blocks/service/__text/service__text.css
@@ -9,3 +9,29 @@
     color: black;
     display: inline-block;
 }
+@media screen and (max-width: 950px) {
+    .service__text{
+        font-size: 17px;
+        line-height: 20px;
+    }
+}
+@media screen and (max-width: 800px) {
+    .service__text{
+        font-size: 13px;
+        line-height: 15px;
+        padding: 0 0 0 8px;
+    }
+}
+@media screen and (max-width: 600px) {
+    .service__text{
+        font-size: 12px;
+        line-height: 13px;
+    }
+}
+@media screen and (max-width: 550px) {
+    .service__text{
+        font-size: 13px;
+        line-height: 16px;
+        padding: 0 0 0 15px;
+    }
+}
