--- a/blocks/cars/__container/cars__container.css
+++ b/blocks/cars/__container/cars__container.css
@@ -1,13 +1,25 @@
 .cars__container{
-    margin:0;
+    margin:0 auto;
     padding: 0;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 400px;
-    overflow: hidden;
+    grid-template-rows: auto;
+    gap:10px;
     border: 4px solid rgb(80, 184, 72);
     border-radius: 10px;
     box-shadow: 7px 5px 5px  rgb(80, 184, 72);
-    width: 1200px;
+    width: 90%;
+}
+@media screen and (max-width: 800px) {
+    .cars__container{
+        gap: 5px;
+        width: 95%;
+        box-shadow: 2px 2px 5px  rgb(80, 184, 72);
+    }
+}
+@media screen and (max-width: 550px) {
+    .cars__container{
+        grid-template-columns: 1fr;
+    }
     
 }
