--- a/blocks/cars/__photo/cars__photo.css
+++ b/blocks/cars/__photo/cars__photo.css
@@ -1,9 +1,8 @@
 .cars__photo{
     margin: 0;
-    padding: 10px;
-    width: 600px;
-    height: 400px;
+    padding: 0;
+    width: 100%;
     object-fit: cover;
-    box-sizing: border-box;
-    flex-shrink: 0;
+    max-height: 100%;
+  
 }
