--- a/blocks/cars/__title/cars__title.css
+++ b/blocks/cars/__title/cars__title.css
@@ -3,8 +3,23 @@
     padding: 50px 0 30px 0;
     font-size: 45px;
     font-weight: 700;
-    line-height: 75px;
     letter-spacing: 0em;
     text-align: center;
     color: rgb(61, 61, 61)
+}
+@media screen and (max-width: 950px) {
+    .cars__title{
+        padding: 20px 0 15px 0;
+        font-size: 35px;
+    }
+}
+@media screen and (max-width: 800px) {
+    .cars__title{
+        font-size: 30px;
+    }
+}
+@media screen and (max-width: 650px) {
+    .cars__title{
+        font-size: 25px;
+    }
 }
