--- a/blocks/gruzchiki/gruzchiki.css
+++ b/blocks/gruzchiki/gruzchiki.css
@@ -1,6 +1,6 @@
 .gruzchiki{
     margin: 0;
-    padding: 0 40px;
+    padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
