--- a/blocks/footer/__icon/footer__icon.css
+++ b/blocks/footer/__icon/footer__icon.css
@@ -4,3 +4,15 @@
     width: 50px;
     height: 50px;
 }
+@media screen and (max-width: 850px) {
+    .footer__icon{
+        width: 35px;
+        height: 35px;
+    }
+}
+@media screen and (max-width: 400px) {
+    .footer__icon{
+        width: 30px;
+        height: 30px;
+    }
+}
