--- a/blocks/footer/__icons/footer__icons.css
+++ b/blocks/footer/__icons/footer__icons.css
@@ -5,3 +5,9 @@
     justify-content: center;
     align-items: center;
 }
+@media screen and (max-width: 550px) {
+    .footer__icons{
+        margin: 0 0 0 30px;
+    }
+    
+}
