--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,8 +1,14 @@
 .footer__link{
-    margin: 0 30px 0 0;
+    margin: 15px 30px 15px 0;
     padding: 0;
     transition: opacity .7s;
 }
 .footer__link:hover{
     opacity: .7;
+}
+@media screen and (max-width: 400px) {
+    .footer__link{
+        margin: 15px 15px 15px 0;
+    }
+    
 }
