--- a/blocks/footer/__text/footer__text.css
+++ b/blocks/footer/__text/footer__text.css
@@ -1,8 +1,24 @@
 .footer__text{
     margin: 0;
-    padding: 2px 0;
+    padding: 0 50px 0 0;
     font-size: 20px;
     font-weight: 400;
     letter-spacing: 0em;
-
+    color: rgb(61, 61, 61);
+}
+@media screen and (max-width: 850px) {
+    .footer__text{
+        font-size: 15px;
+    } 
+}
+@media screen and (max-width: 550px) {
+    .footer__text{
+        padding: 0 30px 0 0;
+        font-size: 12px;
+    } 
+}
+@media screen and (max-width: 400px) {
+    .footer__text{
+        padding: 0 15px 0 0;
+    } 
 }
