--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,8 +1,8 @@
 .footer{
     margin: 60px 0 0 0;
-    padding: 0 40px 0 40px;
+    padding: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-top: 4px solid rgb(80, 184, 72);;
+    border-top: 4px solid rgb(80, 184, 72);
 }
