--- a/blocks/gruzchiki/__container/gruzchiki__container.css
+++ b/blocks/gruzchiki/__container/gruzchiki__container.css
@@ -1,11 +1,23 @@
 .gruzchiki__container{
-    margin:0;
+    margin:0 auto;
     padding: 0;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    border: 4px solid rgb(80, 184, 72);
+    border: 2px solid rgb(80, 184, 72);
     border-radius: 10px;
     box-shadow: 7px 5px 5px  rgb(80, 184, 72);
-    width: 1200px;
+    max-width: 95%;
+}
+@media screen and (max-width: 800px) {
+    .gruzchiki__container{
+        box-shadow: 2px 2px 5px  rgb(80, 184, 72);
+    }
+}
+@media screen and (max-width: 550px) {
+    .gruzchiki__container{
+        flex-direction: column;
+        width: 400px;
+        max-width: 90%;
+    }
 }
