--- a/blocks/slider/__photo/slider__photo.css
+++ b/blocks/slider/__photo/slider__photo.css
@@ -1,6 +1,6 @@
 .slider__photo{
-    width: 600px;
-  height: 460px;
+    width: 100%;
+  height: 100%;
   object-fit: cover;
   position: absolute;
   transition: all ease 1s;
