--- a/blocks/slider/slider.css
+++ b/blocks/slider/slider.css
@@ -2,8 +2,22 @@
     margin: 30px;
     padding: 0;
     position: relative;
-  width: 600px;
-  height: 400px;
-  overflow: hidden;
-  flex-shrink: 0;
+    width: 600px;
+    height: 400px;
+    overflow: hidden;
+    flex-shrink: 0;
+    object-fit: cover;
+}
+@media screen and (max-width: 1100px) {
+  .slider{
+    width: 400px;
+    height: 300px;
+  }
+}
+@media screen and (max-width: 850px) {
+  .slider{
+    width: 280px;
+    height: 180px;
+    margin: 10px;
+  }
 }
