--- a/blocks/gruzchiki/__text/gruzchiki__text.css
+++ b/blocks/gruzchiki/__text/gruzchiki__text.css
@@ -28,3 +28,8 @@
         text-align: center;
     }
 }
+@media screen and (max-width: 400px) {
+    .gruzchiki__text{
+        font-size: 14px;
+    }
+}
