--- a/blocks/content/__title/content__title.css
+++ b/blocks/content/__title/content__title.css
@@ -29,6 +29,7 @@
 @media screen and (max-width: 800px) {
     .content__title{
         padding: 0;
+        font-size: 30px;
         max-width: 90%;
         text-align: center;
     }
