--- a/blocks/content/__tel/content__tel.css
+++ b/blocks/content/__tel/content__tel.css
@@ -5,7 +5,7 @@
     font-weight: 700;
     line-height: 30px;
     letter-spacing: 0.2em;
-    color: #00c395;
+    color: red;
     text-decoration: none;
 }
 @media screen and (max-width: 1200px) {
